First round of UI fixes/improvements to Advanced Search from UI review meeting  - Search button aligned with right of forms area  - Added 2nd search button below form for long forms  - Fixed date and number range components to display properly on IE6 and Safari  - Made search keywords box longer  - Fixed display of forms list drop-down on slower machines i.e. hide menu markup before yui component decorates it
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@22389 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 48aa38ad4fcdd37d853f5ced80c121759b6c2dd5

--- a/root/projects/slingshot/source/web/components/search/search.css
+++ b/root/projects/slingshot/source/web/components/search/search.css
@@ -3,6 +3,11 @@
 	margin: 0 -10px;
 }
 
+.search .align-right
+{
+   text-align: right;
+}
+
 .search .search-sites
 {
    margin-bottom: -0.75em;
@@ -27,7 +32,7 @@
 
 .search .search-box .terms
 {
-   width: 32em;
+   width: 42em;
 }
 
 .search .search-icon span.first-child
@@ -159,6 +164,7 @@
 .search .form-row
 {
    margin: 1.5em 0 1.5em 1.5em;
+   width: 830px;
 }
 
 .search .form-row span.lookfor
@@ -219,7 +225,15 @@
    border-width: 0px;
 }
 
+/* hide mandatory indicators - make no sense for a search */
 .search .form-container .mandatory-indicator
 {
    display: none;
+}
+
+/* collapse form-buttons div as it is not used */
+.search .form-container .form-buttons
+{
+   margin: 0;
+   padding: 0;
 }
